overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ h3 {
     max-width: var(--container-width-lg);
     /* margin: 0 100px; */
     margin: auto;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 @media screen and (max-width: 1024px) {
@@ -399,6 +399,7 @@ h3 {
 
     .home__intro a {
         font-size: .815rem;
+        /* position: absolute; */
     }
 
     .home__img {
